--- a/src/public/components/homePage/homePage.html
+++ b/src/public/components/homePage/homePage.html
@@ -19,6 +19,9 @@
                 </a>
                 <span #icons></span>
             </div>
+            <div style="height: 27px; margin-top: 20px; clear: both;">
+                <iframe src="https://www.facebook.com/plugins/like.php?href={{hostUrl}}&width=320&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1950796945206063" width="320" height="27" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
             <div #image>
                 <img src="/assets/images/slider-1.png"/>
             </div>
