--- a/src/index.hbs
+++ b/src/index.hbs
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Google Analytics -->
     <script>
-        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+        window.ga = window.ga || function() {
+            (ga.q = ga.q || []).push(arguments);
+        };
+        ga.l = +new Date;
         ga('create', 'UA-119607581-1', 'auto');
         ga('send', 'pageview');
     </script>
@@ -16,6 +19,7 @@
         body {
             background-color: white;
         }
+
         #boot {
             position: absolute;
             top: 50%;
@@ -27,47 +31,94 @@
             font-family: Arial;
             height: 110px;
         }
+
         #boot svg {
             animation: loading 2s infinite;
         }
+
         #system {
             opacity: 0;
         }
+
         @keyframes loading {
-            0% {transform: rotateY(0deg)}
-            100% {transform: rotateY(360deg)}
+            0% {
+                transform: rotateY(0deg)
+            }
+            100% {
+                transform: rotateY(360deg)
+            }
         }
     </style>
     <title>In&Out - centro de belleza</title>
 </head>
 <body>
-    <div id="boot">
-        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100px" height="100px" viewBox="0 0 4510 5190" preserveAspectRatio="xMidYMid meet">
-            <g id="layer1" fill="#fefffe" fill-opacity="0" stroke="none">
-                <path d="M1 4068 c1 -618 5 -1080 9 -1028 35 438 291 1059 595 1440 97 121 256 299 342 381 187 179 411 295 610 318 38 5 -286 9 -744 10 l-813 1 1 -1122z"/>
-                <path d="M1795 5180 c97 -11 204 -49 364 -130 166 -85 235 -104 351 -98 87 5 123 15 350 98 97 36 130 43 213 48 121 6 186 -7 288 -59 108 -54 226 -146 359 -279 128 -127 351 -401 454 -555 192 -288 296 -585 330 -945 1 -19 4 407 4 948 l2 982 -1392 -1 c-766 -1 -1361 -5 -1323 -9z"/>
-                <path d="M4497 2773 c-28 -330 -198 -701 -421 -917 -177 -171 -531 -348 -769 -386 -217 -35 -515 27 -794 165 l-124 61 -67 -39 c-262 -153 -536 -258 -792 -303 -129 -24 -385 -23 -494 0 -188 41 -329 112 -486 244 -301 254 -505 656 -540 1067 -4 50 -8 -530 -9 -1287 l-1 -1378 2255 0 2255 0 0 1425 c0 784 -2 1425 -4 1425 -1 0 -6 -35 -9 -77z m-2102 -1189 l38 -15 -6 -73 -6 -73 122 -62 c177 -89 290 -174 463 -346 172 -171 278 -299 410 -500 102 -156 210 -352 199 -363 -4 -4 -75 -6 -158 -6 -242 2 -434 52 -619 162 -271 160 -443 461 -474 830 -4 46 -10 79 -14 75 -4 -4 -29 -64 -55 -133 -60 -154 -203 -442 -288 -576 -133 -211 -373 -494 -419 -494 -31 0 -118 91 -118 123 0 17 24 51 81 114 265 289 529 671 649 940 45 102 106 275 130 371 12 47 13 48 65 26z"/>
-            </g>
-            <g id="layer2" fill="#56ab29" stroke="none">
-                <path d="M1557 5180 c-202 -25 -423 -141 -610 -319 -86 -82 -245 -260 -342 -381 -143 -180 -291 -436 -394 -683 -60 -146 -138 -393 -166 -531 -53 -253 -55 -564 -5 -794 74 -348 257 -660 510 -874 157 -132 298 -203 486 -244 109 -23 365 -24 494 0 256 45 530 150 792 303 l67 39 124 -61 c210 -104 411 -161 604 -172 197 -11 359 30 589 147 322 164 478 314 623 598 141 277 189 527 178 917 -6 217 -21 329 -67 500 -77 290 -201 515 -469 850 -228 285 -435 476 -610 564 -102 52 -167 65 -288 59 -83 -5 -116 -12 -213 -48 -227 -83 -263 -93 -350 -98 -118 -6 -181 12 -374 108 -89 44 -195 88 -236 99 -88 23 -247 33 -343 21z"/>
-                <path d="M2330 1558 c-24 -96 -85 -269 -130 -371 -120 -269 -384 -651 -649 -940 -57 -63 -81 -97 -81 -114 0 -32 87 -123 118 -123 46 0 286 283 419 494 85 134 228 422 288 576 26 69 51 129 55 133 4 4 10 -29 14 -75 51 -611 465 -986 1093 -992 83 0 154 2 158 6 11 11 -97 207 -199 363 -132 201 -238 329 -410 500 -173 172 -286 257 -463 346 l-122 62 6 73 6 73 -38 15 c-52 22 -53 21 -65 -26z"/>
-            </g>
-        </svg>
-        in&out
-    </div>
+<div id="boot">
+    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100px" height="100px" viewBox="0 0 4510 5190"
+         preserveAspectRatio="xMidYMid meet">
+        <g id="layer1" fill="#fefffe" fill-opacity="0" stroke="none">
+            <path d="M1 4068 c1 -618 5 -1080 9 -1028 35 438 291 1059 595 1440 97 121 256 299 342 381 187 179 411 295 610 318 38 5 -286 9 -744 10 l-813 1 1 -1122z"/>
+            <path d="M1795 5180 c97 -11 204 -49 364 -130 166 -85 235 -104 351 -98 87 5 123 15 350 98 97 36 130 43 213 48 121 6 186 -7 288 -59 108 -54 226 -146 359 -279 128 -127 351 -401 454 -555 192 -288 296 -585 330 -945 1 -19 4 407 4 948 l2 982 -1392 -1 c-766 -1 -1361 -5 -1323 -9z"/>
+            <path d="M4497 2773 c-28 -330 -198 -701 -421 -917 -177 -171 -531 -348 -769 -386 -217 -35 -515 27 -794 165 l-124 61 -67 -39 c-262 -153 -536 -258 -792 -303 -129 -24 -385 -23 -494 0 -188 41 -329 112 -486 244 -301 254 -505 656 -540 1067 -4 50 -8 -530 -9 -1287 l-1 -1378 2255 0 2255 0 0 1425 c0 784 -2 1425 -4 1425 -1 0 -6 -35 -9 -77z m-2102 -1189 l38 -15 -6 -73 -6 -73 122 -62 c177 -89 290 -174 463 -346 172 -171 278 -299 410 -500 102 -156 210 -352 199 -363 -4 -4 -75 -6 -158 -6 -242 2 -434 52 -619 162 -271 160 -443 461 -474 830 -4 46 -10 79 -14 75 -4 -4 -29 -64 -55 -133 -60 -154 -203 -442 -288 -576 -133 -211 -373 -494 -419 -494 -31 0 -118 91 -118 123 0 17 24 51 81 114 265 289 529 671 649 940 45 102 106 275 130 371 12 47 13 48 65 26z"/>
+        </g>
+        <g id="layer2" fill="#56ab29" stroke="none">
+            <path d="M1557 5180 c-202 -25 -423 -141 -610 -319 -86 -82 -245 -260 -342 -381 -143 -180 -291 -436 -394 -683 -60 -146 -138 -393 -166 -531 -53 -253 -55 -564 -5 -794 74 -348 257 -660 510 -874 157 -132 298 -203 486 -244 109 -23 365 -24 494 0 256 45 530 150 792 303 l67 39 124 -61 c210 -104 411 -161 604 -172 197 -11 359 30 589 147 322 164 478 314 623 598 141 277 189 527 178 917 -6 217 -21 329 -67 500 -77 290 -201 515 -469 850 -228 285 -435 476 -610 564 -102 52 -167 65 -288 59 -83 -5 -116 -12 -213 -48 -227 -83 -263 -93 -350 -98 -118 -6 -181 12 -374 108 -89 44 -195 88 -236 99 -88 23 -247 33 -343 21z"/>
+            <path d="M2330 1558 c-24 -96 -85 -269 -130 -371 -120 -269 -384 -651 -649 -940 -57 -63 -81 -97 -81 -114 0 -32 87 -123 118 -123 46 0 286 283 419 494 85 134 228 422 288 576 26 69 51 129 55 133 4 4 10 -29 14 -75 51 -611 465 -986 1093 -992 83 0 154 2 158 6 11 11 -97 207 -199 363 -132 201 -238 329 -410 500 -173 172 -286 257 -463 346 l-122 62 6 73 6 73 -38 15 c-52 22 -53 21 -65 -26z"/>
+        </g>
+    </svg>
+    in&out
+</div>
 
-    <div id="system"></div>
-    <div id="welcome">
-        <h1>Bievenido al nuevo sitio web de In&Out</h1>
-        <p>A partir de ahora podras:</p>
-            <h3>HACER COMPRAS ON-LINE</h3>
-            <h3>RESERVAR CITAS ON-LINE</h3>
-        <hr style="width: 30%; margin: 0 auto"/>
-        <p>En In&Out utilizamos cookies, propias y de terceros, para mejorar su experiencia de usuario. Al navegar en esta web aceptas su utilización</p>
-        <button class="clickable button green-bg-color white-color" onclick="window.cookieAccept()">
-            Acepto vuestra política de cookies
-        </button>
-    </div>
-    <script src="/public.bundle.js?v={{htmlWebpackPlugin.options.version}}"></script>
+<div id="system"></div>
+<div id="welcome">
+    <h1>In&Out centro de bellza</h1>
+    <p>
+        In&Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en
+        Málaga y con una larga trayectoria que nos avalan en tratamientos faciales, tratamientos corporales, masajes y
+        organizadores de beauty parties.
+    </p>
+    <p>
+    <h3>Faciales</h3>
+    ¿Has dicho tratamientos faciales? En In&Out te estamos esperando con un amplio abanico de posibilidades para tratar
+    tu piel en la medida de tus necesidades.
+    </p>
+    <p>
+    <h3>Beauty</h3>
+    Siéntete guapa por dentro y por fuera con In&Out, dedícate el tiempo que te mereces y arrasa allí por donde pases.
+    </p>
+    <p>
+    <h3>Depilacíon con hilo</h3>
+    ¿Sabías que In&Out es pionera en Málaga en la depilación con hilo? ¿Que aun no lo has probado? Y, ¿a qué esperas?,
+    ponte en manos de las mejores profesionales en la técnica de la depilación con hilo.
+    </p>
+    <p>
+    <h3>Corporales</h3>
+    Desde la presoterapia pasando por las velas smooth hasta llegar a la radiofrecuencia, son solo algunas muestras de
+    lo que puedes encontrar en tu centro de belleza de Málaga In&Out
+    </p>
+    <nav>
+        <a href="/es/tratamientos"></a>
+        <a href="/es/tarjetas"></a>
+        <a href="/es/promociones"></a>
+        <a href="/es/citas"></a>
+        <a href="/es/beauty-parties"></a>
+        <a href="/es/beauty-corner"></a>
+        <a href="/es/inandout-go"></a>
+        <a href="/es/novedades"></a>
+        <a href="/es/fotos"></a>
+        <a href="/es/medidor"></a>
+        <a href="/es/equipo"></a>
+        <a href="/es/horario"></a>
+        <a href="/es/como-llegar"></a>
+        <a href="/es/llmanos"></a>
+        <a href="/es/comentarios"></a>
+        <a href="/es/preguntas"></a>
+        <a href="/es/en-los-medios"></a>
+    </nav>
+    <ul>
+        <li><i class="fa fa-phone"></i>C/ Salitre, 11:<span> T. 951 131 460  ·  M. 633 90 91 03</span></li>
+        <li><i class="fa fa-phone"></i>C/ Compañia, 42:<span> T. 951 387 919  ·  M. 695 685 291 </span></li>
+    </ul>
+</div>
+<script src="/public.bundle.js?v={{htmlWebpackPlugin.options.version}}"></script>
 </body>
 </html>
