--- a/src/index.hbs
+++ b/src/index.hbs
@@ -2,7 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="alternate" hreflang="es" href="http://www.inandoutbelleza.es"/>
+    <meta name="author" content="Massimiliano Cattaneo">
+    <meta name="designer" content="Massimiliano Cattaneo">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/favicon.png" rel="shortcut icon"
+          type="image/x-icon">
+    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/apple-touch-icon.png"
+          rel="apple-touch-icon-precomposed">
+    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/apple-touch-icon-114x114.png"
+          sizes="114x114" rel="apple-touch-icon-precomposed">
+    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/apple-touch-icon-72x72.png"
+          sizes="72x72" rel="apple-touch-icon-precomposed">
+    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/apple-touch-icon-144x144.png"
+          sizes="144x144" rel="apple-touch-icon-precomposed">
+    <meta name="description"
+          content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
+    <meta name="robots" content="noodp">
+    <link rel="canonical" href="http://www.inandoutbelleza.es/">
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
+    <meta property="og:description"
+          content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
+    <meta property="og:url" content="http://www.inandoutbelleza.es/">
+    <meta property="og:site_name" content="In&amp;Out Centro de Belleza en Málaga">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:description"
+          content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
+    <meta name="twitter:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
+    <meta name="twitter:site" content="@bellezainandout">
+    <meta name="twitter:image" content="http://www.inandoutbelleza.es/wp-content/uploads/2016/11/opiwebgrande.png">
+    <meta name="twitter:creator" content="@bellezainandout">
+    <link rel="shortlink" href="http://www.inandoutbelleza.es/">
+
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function() {
