--- a/src/index.hbs
+++ b/src/index.hbs
@@ -7,15 +7,15 @@
     <meta name="designer" content="Massimiliano Cattaneo">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/favicon.png" rel="shortcut icon"
+    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/favicon.png" rel="shortcut icon"
           type="image/x-icon">
-    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/apple-touch-icon.png"
+    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon.png"
           rel="apple-touch-icon-precomposed">
-    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/apple-touch-icon-114x114.png"
+    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-114x114.png"
           sizes="114x114" rel="apple-touch-icon-precomposed">
-    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/apple-touch-icon-72x72.png"
+    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-72x72.png"
           sizes="72x72" rel="apple-touch-icon-precomposed">
-    <link href="http://www.inandoutbelleza.es/wp-content/themes/trendsalon/images/apple-touch-icon-144x144.png"
+    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-144x144.png"
           sizes="144x144" rel="apple-touch-icon-precomposed">
     <meta name="description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
@@ -33,7 +33,7 @@
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
     <meta name="twitter:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:site" content="@bellezainandout">
-    <meta name="twitter:image" content="http://www.inandoutbelleza.es/wp-content/uploads/2016/11/opiwebgrande.png">
+    <meta name="twitter:image" content="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-144x144.png">
     <meta name="twitter:creator" content="@bellezainandout">
     <link rel="shortlink" href="http://www.inandoutbelleza.es/">
 
