--- a/src/public/components/menu/menuItemButton.html
+++ b/src/public/components/menu/menuItemButton.html
@@ -1,4 +1,4 @@
-<a href="{{urls.treatments}}/{{path}}"
+<a href="{{path}}"
    onclick="window.navigate(this, event)"
    style="display: block; text-decoration: none"
    class="apply-transform-transition white-bg-color menu-item green-color dark-grey-border-color">
