--- a/src/apps/products/index.scss
+++ b/src/apps/products/index.scss
@@ -2,17 +2,7 @@
   width: 100%;
 }
 
-#top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 10px;
-  z-index: 2;
-  background: white;
-  border-bottom: 1px solid black;
-}
-
-#products {
-  margin-top: 55px;
+#description {
+  text-align: justify;
+  margin-top: 10px;
 }
