--- a/src/index.hbs
+++ b/src/index.hbs
@@ -40,7 +40,7 @@
           content="{{htmlWebpackPlugin.options.description}}">
     <meta id="twitter-meta-title" name="twitter:title" content="{{htmlWebpackPlugin.options.title}}">
     <meta name="twitter:site" content="@bellezainandout">
-    <meta name="twitter:image" content="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png">
+    <meta name="twitter:image" content="{{htmlWebpackPlugin.options.image}}">
     <meta name="twitter:creator" content="@bellezainandout">
 
     <!-- Google Analytics -->
@@ -162,7 +162,7 @@
             Málaga C/ Salitre, 11:<span> T. 951 131 460  ·  M. 633 90 91 03</span>
         </address>
         <address>
-            Málaga C/ Compañia, 42:<span> T. 951 387 919  ·  M. 695 685 291 </span>
+            Malaga C/ Puerta de Buenaventura, 4:<span> T. 951 387 919  ·  M. 695 685 291 </span>
         </address>
     </footer>
 </div>
@@ -174,6 +174,7 @@
     }
 </script>
 <script src="/assets/vendor/polyfills.min.js"></script>
+<script>window.stripeKey = '{{htmlWebpackPlugin.options.stripeKey}}'</script>
 <script src="/public.bundle.js?v={{htmlWebpackPlugin.options.version}}"></script>
 </body>
 </html>
