--- a/src/public/components/menu/menuListButton.html
+++ b/src/public/components/menu/menuListButton.html
@@ -1,4 +1,4 @@
-<a style="display: none" href="{{urls.treatments}}"
+<a style="display: none" href="{{path}}"
    onclick="window.navigate(this, event)"
    class="menu-button menu-item green-color dark-grey-border-color">
 </a>
