--- a/src/index.hbs
+++ b/src/index.hbs
@@ -104,7 +104,7 @@
 
 <div id="system"></div>
 <div id="welcome">
-    <h1>In&Out centro de bellza</h1>
+    <h1>In&Out centro de belleza en Malaga</h1>
     <p>
         In&Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en
         Málaga y con una larga trayectoria que nos avalan en tratamientos faciales, tratamientos corporales, masajes y
