some improvements - posts from old website

--- a/src/admin/components/clients/clients-list.html
+++ b/src/admin/components/clients/clients-list.html
@@ -27,7 +27,7 @@
             </span>
             </button>
             <a type="button"
-               onclick="window.navigate(this)"
+               onclick="window.navigate(this, event)"
                href="{{urls.history.href}}?id={{this._id}}"
                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
                data-upgraded=",MaterialButton,MaterialRipple">
