--- a/src/admin/components/header/template.html
+++ b/src/admin/components/header/template.html
@@ -19,7 +19,7 @@
             <li class="mdl-menu__item"><a
                     class="mdl-color-text--grey-700"
                     style="display: block;"
-                    onclick="window.navigate(this)"
+                    onclick="window.navigate(this, event)"
                     href="{{urls.about.href}}">{{urls.about.menu}}</a></li>
             <li class="mdl-menu__item"><output
                     onclick="this.form.logout()"
