--- a/src/public/components/icon/icon.html
+++ b/src/public/components/icon/icon.html
@@ -1,4 +1,4 @@
-<a href="{{url}}" onclick="window.navigate(this)" #wrapper class="clickable">
+<a href="{{url}}" onclick="window.navigate(this, event)" #wrapper class="clickable">
     <div #loader class="c100 p50 big">
         <span #loadertext>50%</span>
         <div #loaderslice>
