--- a/src/public/components/header/header.html
+++ b/src/public/components/header/header.html
@@ -4,11 +4,11 @@
         <div #subtext>centro de belleza</div>
     </div>
     <a #user
-       href="{{loginUrl}}" onclick="window.navigate(this)"
+       href="{{loginUrl}}" onclick="window.navigate(this, event)"
        class="clickable flaticon-profile dark-grey-border-color medium-grey-color"></a>
     <span #divider></span>
     <a #cart
-         href="{{cartUrl}}" onclick="window.navigate(this)"
+         href="{{cartUrl}}" onclick="window.navigate(this, event)"
          class="clickable flaticon-shopping-basket dark-grey-border-color">
         <span #notify class="icon-notify"></span>
     </a>
