--- a/src/public/components/window/window.html
+++ b/src/public/components/window/window.html
@@ -1,11 +1,11 @@
 <div #wrapper class="white-bg-color dark-grey-color">
     <div #bar class="dark-grey-bg-color white-color">
         <a #close
-           href="{{urls.home}}" onclick="window.navigate(this)"
+           href="{{urls.home}}" onclick="window.navigate(this, event)"
            class="fa fa-window-close white-color"></a>
         <div #title></div>
         <a #cart
-           href="{{urls.cart}}" onclick="window.navigate(this)"
+           href="{{urls.cart}}" onclick="window.navigate(this, event)"
            class="clickable flaticon-shopping-basket dark-grey-border-color white-color">
             <span #notify class="icon-notify"></span>
         </a>
