definitely https://wwww.inandoutbelleza.es

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -2,40 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="alternate" hreflang="es" href="http://www.inandoutbelleza.es"/>
+    <link rel="alternate" hreflang="es" href="https://www.inandoutbelleza.es"/>
     <meta name="author" content="Massimiliano Cattaneo">
     <meta name="designer" content="Massimiliano Cattaneo">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/favicon.png" rel="shortcut icon"
+    <link href="https://www.inandoutbelleza.es/assets/images/favicon.png" rel="shortcut icon"
           type="image/x-icon">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon.png"
+    <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon.png"
           rel="apple-touch-icon-precomposed">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-114x114.png"
+    <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-114x114.png"
           sizes="114x114" rel="apple-touch-icon-precomposed">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-72x72.png"
+    <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-72x72.png"
           sizes="72x72" rel="apple-touch-icon-precomposed">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-144x144.png"
+    <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png"
           sizes="144x144" rel="apple-touch-icon-precomposed">
     <meta name="description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
     <meta name="robots" content="noodp">
-    <link rel="canonical" href="http://www.inandoutbelleza.es/">
+    <link rel="canonical" href="https://www.inandoutbelleza.es/">
     <meta property="og:locale" content="es_ES">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
     <meta property="og:description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
-    <meta property="og:url" content="http://www.inandoutbelleza.es/">
+    <meta property="og:url" content="https://www.inandoutbelleza.es/">
     <meta property="og:site_name" content="In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
     <meta name="twitter:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:site" content="@bellezainandout">
-    <meta name="twitter:image" content="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-144x144.png">
+    <meta name="twitter:image" content="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png">
     <meta name="twitter:creator" content="@bellezainandout">
-    <link rel="shortlink" href="http://www.inandoutbelleza.es/">
+    <link rel="shortlink" href="https://www.inandoutbelleza.es/">
 
     <!-- Google Analytics -->
     <script>
@@ -130,23 +130,23 @@
     lo que puedes encontrar en tu centro de belleza de Málaga In&Out
     </p>
     <nav>
-        <a href="/es/tratamientos"></a>
-        <a href="/es/tarjetas"></a>
-        <a href="/es/promociones"></a>
-        <a href="/es/citas"></a>
-        <a href="/es/beauty-parties"></a>
-        <a href="/es/beauty-corner"></a>
-        <a href="/es/inandout-go"></a>
-        <a href="/es/novedades"></a>
-        <a href="/es/fotos"></a>
-        <a href="/es/medidor"></a>
-        <a href="/es/equipo"></a>
-        <a href="/es/horario"></a>
-        <a href="/es/como-llegar"></a>
-        <a href="/es/llmanos"></a>
-        <a href="/es/comentarios"></a>
-        <a href="/es/preguntas"></a>
-        <a href="/es/en-los-medios"></a>
+        <a href="/es/tratamientos">TRATAMIENTOS</a>
+        <a href="/es/tarjetas">TARJETAS</a>
+        <a href="/es/promociones">PROMOCIONES</a>
+        <a href="/es/citas">CITAS</a>
+        <a href="/es/beauty-parties">BEAUTY PARTIES</a>
+        <a href="/es/beauty-corner">BEAUTY CORNER</a>
+        <a href="/es/inandout-go">IN AND OUT GO</a>
+        <a href="/es/novedades">NOVEDADES</a>
+        <a href="/es/fotos">FOTOS</a>
+        <a href="/es/medidor">MEDIDOR</a>
+        <a href="/es/equipo">EQUIPO</a>
+        <a href="/es/horario">HORARIO</a>
+        <a href="/es/como-llegar">COMO LLEGAR</a>
+        <a href="/es/llmanos">LLAMANOS</a>
+        <a href="/es/comentarios">COMENTARIOS</a>
+        <a href="/es/preguntas">PREGUNTAS</a>
+        <a href="/es/en-los-medios">EN LOS MEDIOS</a>
     </nav>
     <ul>
         <li><i class="fa fa-phone"></i>C/ Salitre, 11:<span> T. 951 131 460  ·  M. 633 90 91 03</span></li>
