--- a/src/admin.hbs
+++ b/src/admin.hbs
@@ -3,35 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/favicon.png" rel="shortcut icon"
+    <link href="https://www.inandoutbelleza.es/assets/images/favicon.png" rel="shortcut icon"
           type="image/x-icon">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon.png"
+    <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon.png"
           rel="apple-touch-icon-precomposed">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-114x114.png"
+    <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-114x114.png"
           sizes="114x114" rel="apple-touch-icon-precomposed">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-72x72.png"
+    <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-72x72.png"
           sizes="72x72" rel="apple-touch-icon-precomposed">
-    <link href="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-144x144.png"
+    <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png"
           sizes="144x144" rel="apple-touch-icon-precomposed">
     <meta name="description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
     <meta name="robots" content="noodp">
-    <link rel="canonical" href="http://www.inandoutbelleza.es/">
+    <link rel="canonical" href="https://www.inandoutbelleza.es/">
     <meta property="og:locale" content="es_ES">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
     <meta property="og:description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
-    <meta property="og:url" content="http://www.inandoutbelleza.es/">
+    <meta property="og:url" content="https://www.inandoutbelleza.es/">
     <meta property="og:site_name" content="In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
     <meta name="twitter:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:site" content="@bellezainandout">
-    <meta name="twitter:image" content="https://inandoutbelleza.eu-4.evennode.com/assets/images/apple-touch-icon-144x144.png">
+    <meta name="twitter:image" content="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png">
     <meta name="twitter:creator" content="@bellezainandout">
-    <link rel="shortlink" href="http://www.inandoutbelleza.es/">
+    <link rel="shortlink" href="https://www.inandoutbelleza.es/">
     <link href="/css/material.css?v={{htmlWebpackPlugin.options.version}}" rel="stylesheet"/>
     <link href="/css/material.select.min.css?v={{htmlWebpackPlugin.options.version}}" rel="stylesheet"/>
     <link href="/css/admin.css?v={{htmlWebpackPlugin.options.version}}" rel="stylesheet"/>
