--- a/src/index.hbs
+++ b/src/index.hbs
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="alternate" hreflang="es" href="https://www.inandoutbelleza.es"/>
-    <meta name="author" content="Massimiliano Cattaneo">
-    <meta name="designer" content="Massimiliano Cattaneo">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link href="https://www.inandoutbelleza.es/assets/images/favicon.png" rel="shortcut icon"
@@ -17,21 +15,21 @@
           sizes="72x72" rel="apple-touch-icon-precomposed">
     <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png"
           sizes="144x144" rel="apple-touch-icon-precomposed">
-    <meta name="description"
+    <meta id="meta-description" name="description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
     <meta name="robots" content="noodp">
     <link rel="canonical" href="https://www.inandoutbelleza.es/">
     <meta property="og:locale" content="es_ES">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
-    <meta property="og:description"
+    <meta id="og-meta-title" property="og:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
+    <meta id="og-meta-description" property="og:description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
     <meta property="og:url" content="https://www.inandoutbelleza.es/">
     <meta property="og:site_name" content="In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:description"
+    <meta id="twitter-meta-description" name="twitter:description"
           content="In&amp;Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la depilación con hilo en Málaga y en tratamientos de belleza.">
-    <meta name="twitter:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
+    <meta id="twitter-meta-title" name="twitter:title" content="Inicio - In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:site" content="@bellezainandout">
     <meta name="twitter:image" content="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png">
     <meta name="twitter:creator" content="@bellezainandout">
