--- a/src/public/components/homePage/news.html
+++ b/src/public/components/homePage/news.html
@@ -1,7 +1,7 @@
 <div #wrapper class="box">
     <div>
         <h3 #title>{{item.title}}</h3>
-        <div><img style="width: 100%;" src="{{item.src}}"/></div>
+        <div><img style="width: 100%;" src="{{item.src}}" alt="{{item.title}}" title="{{item.title}}"/></div>
         <p>{{item.info}}</p>
         <div #button class="button red-bg-color white-color">
             {{homePage.onEvidence}}
