last fix - keep calm

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="alternate" hreflang="es" href="https://www.inandoutbelleza.es"/>
+    <link rel="alternate" hreflang="es" href="https://www.inandoutbelleza.es/es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link href="https://www.inandoutbelleza.es/assets/images/favicon.png" rel="shortcut icon"
@@ -18,13 +18,12 @@
     <meta id="meta-description" name="description"
           content="{{htmlWebpackPlugin.options.description}}">
     <meta name="robots" content="noodp">
-    <link rel="canonical" href="https://www.inandoutbelleza.es/">
+    <meta property="fb:app_id" content="1950796945206063">
     <meta property="og:locale" content="es_ES">
     <meta property="og:type" content="website">
     <meta id="og-meta-title" property="og:title" content="{{htmlWebpackPlugin.options.title}}">
     <meta id="og-meta-description" property="og:description"
           content="{{htmlWebpackPlugin.options.description}}">
-    <meta property="og:url" content="https://www.inandoutbelleza.es/">
     <meta property="og:site_name" content="In&amp;Out Centro de Belleza en Málaga">
     <meta name="twitter:card" content="summary">
     <meta id="twitter-meta-description" name="twitter:description"
@@ -33,7 +32,6 @@
     <meta name="twitter:site" content="@bellezainandout">
     <meta name="twitter:image" content="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-144x144.png">
     <meta name="twitter:creator" content="@bellezainandout">
-    <link rel="shortlink" href="https://www.inandoutbelleza.es/">
 
     <!-- Google Analytics -->
     <script>
