--- a/src/index.hbs
+++ b/src/index.hbs
@@ -131,7 +131,7 @@
     in&out
 </div>
 
-<div id="system"></div>
+<div id="system" style="position: relative;"></div>
 <div id="welcome">
 </div>
 <div id="static">
