http request timeout 10000

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="alternate" hreflang="es" href="https://www.inandoutbelleza.es/es"/>
+    <!--TODO: when I will add the english version -->
+    <!--<link rel="alternate" hreflang="es" href="https://www.inandoutbelleza.es/es"/>-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link href="https://www.inandoutbelleza.es/assets/images/favicon.png" rel="shortcut icon"
