--- a/src/admin.hbs
+++ b/src/admin.hbs
@@ -52,6 +52,8 @@
     <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
     <script src="/assets/vendor/material.min.js?v={{htmlWebpackPlugin.options.version}}"></script>
     <script src="/assets/vendor/material.select.js?v={{htmlWebpackPlugin.options.version}}"></script>
+    <script src="http://js.nicedit.com/nicEdit-latest.js"></script>
+    <script src="/assets/vendor/polyfills.min.js"></script>
     <script src="/admin.bundle.js?v={{htmlWebpackPlugin.options.version}}"></script>
 </body>
 </html>
