--- a/src/index.hbs
+++ b/src/index.hbs
@@ -164,6 +164,7 @@
         });
     }
 </script>
+<script src="/assets/vendor/polyfills.min.js"></script>
 <script src="/public.bundle.js?v={{htmlWebpackPlugin.options.version}}"></script>
 </body>
 </html>
