--- a/src/admin/components/menuItems/template.html
+++ b/src/admin/components/menuItems/template.html
@@ -27,6 +27,10 @@
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">print</i>
         {{urls.print.menu}}
     </a>
+    <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.newsletter.href}}">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">email</i>
+        {{urls.newsletter.menu}}
+    </a>
     <a class="mdl-navigation__link" onclick="window.navigate(this, event)" href="{{urls.bonuses.href}}">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">toc</i>
         {{urls.bonuses.menu}}
