--- a/src/admin/components/events/hour.html
+++ b/src/admin/components/events/hour.html
@@ -1,10 +1,10 @@
 <output class="hour"
-        style="top: {{top}}px; height: {{height}}px"
+        style="top: {{top}}px; height: {{height}}px; background-color: {{bgColor}}"
         ondragenter="this.form.dragEnter()"
         ondragleave="this.form.dragLeave()"
         ondragover="this.form.dragOver()"
         ondblclick="this.form.drop({worker: '{{worker}}'}, {processId: 98})"
         ondrop="this.form.drop({worker: '{{worker}}'})"
         onclick="this.form.paste({worker: '{{worker}}'})">
-    <label>{{label}}</label>
+    <label style="background-color: {{bgColor}}">{{label}}</label>
 </output>
