--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -186,12 +186,11 @@ th {
 
 .hour label {
     position: relative;
-    background: #ffffff;
     top: -7px;
 }
 
 .hour.hover label {
-    background: #56ab2a;
+    background: #56ab2a !important;
 }
 
 .process {
