some fixes + product brands

--- a/src/public/components/homePage/homePage.html
+++ b/src/public/components/homePage/homePage.html
@@ -23,7 +23,14 @@
                 <iframe src="https://www.facebook.com/plugins/like.php?href=https://www.facebook.com/inandoutbelleza&width=320&layout=standard&action=like&size=large&show_faces=true&share=true&height=80&appId=1950796945206063" width="320" height="27" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
             </div>
             <div #image>
-                <img src="/assets/images/slider-1.png"/>
+                <img src="/assets/images/slider-1.png"  alt="In&Out centro de belleza en Malaga"/>
+            </div>
+            <div #brands>
+                <img style="min-width: 100px; width: 14%; margin: 0 2%; display: inline-block;" src="/assets/images/carita-paris-malaga-venta-productos-beauty-center.png" alt="Carita Paris en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
+                <img style="min-width: 100px; width: 14%; margin: 0 2%; display: inline-block;" src="/assets/images/opi-malaga-esmaltes-venta.png" alt="Fedua en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
+                <img style="min-width: 100px; width: 14%; margin: 0 2%; display: inline-block;" src="/assets/images/decleor-paris-productos-venta-malaga.png" alt="Decleor Paris en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
+                <img style="min-width: 100px; width: 14%; margin: 0 2%; display: inline-block;" src="/assets/images/fedua-malaga-venta-productos-beauty-center.png" alt="Mama Mio en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
+                <img style="min-width: 100px; width: 14%; margin: 0 2%; display: inline-block;" src="/assets/images/mama-mio-productos-venta-malaga-beauty-center.png" alt="Mama Mio en Malaga - venta productos de alta cosmetica en beauty center de In&Out"/>
             </div>
             <div #news></div>
         </div>
