--- a/src/public/components/homePage/news.html
+++ b/src/public/components/homePage/news.html
@@ -1,5 +1,5 @@
 <div #wrapper class="box">
-    <div>
+    <div style="width: 100%;">
         <h3 #title>{{item.title}}</h3>
         <div><img style="width: 100%;" src="{{item.src}}" alt="{{item.title}}" title="{{item.title}}"/></div>
         <p>{{item.info}}</p>
