--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -3,16 +3,18 @@
     </div>
     <div #processes class="day-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--8-col-desktop">
     </div>
-    <div #carmen class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--2-col-desktop">
+    <div #carmen class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
-    <div #carmen_v class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--2-col-desktop">
+    <div #carmen_v class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
-    <div #estefania class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--2-col-desktop">
+    <div #estefania class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
-    <div #vanessa class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--2-col-desktop">
+    <div #cristina class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
-    <div #cristina class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--2-col-desktop">
+    <div #mari class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
-    <div #eila class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--2-col-desktop">
+    <div #vanessa class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
+    </div>
+    <div #eila class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
 </form>
