--- a/src/index.hbs
+++ b/src/index.hbs
@@ -5,9 +5,17 @@
     <!--TODO: when I will add the english version -->
     <!--<link rel="alternate" hreflang="es" href="https://www.inandoutbelleza.es/es"/>-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="theme-color" content="#56ab29" />
 
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
     <link href="https://www.inandoutbelleza.es/assets/images/favicon.png" rel="shortcut icon"
           type="image/x-icon">
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#56ab29">
+    <meta name="apple-mobile-web-app-title" content="In&Out Belleza">
     <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon.png"
           rel="apple-touch-icon-precomposed">
     <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon-114x114.png"
