fix camera button position

--- a/src/apps/photoMeasure/index.scss
+++ b/src/apps/photoMeasure/index.scss
@@ -5,13 +5,15 @@
 
 
 #snap {
+  display: none;
+  float: right;
+  min-width: 101px;
+}
+.mobile #snap {
   position: fixed;
   right: 20px;
   bottom: 10px;
   z-index: 1001;
-  display: none;
-  float: right;
-  min-width: 101px;
 }
 
 #back {
@@ -23,12 +25,15 @@
 #camera {
   display: none;
   float: right;
+  min-width: 101px;
+  margin-top: -20px;
+}
+
+.mobile #camera {
   position: fixed;
   left: 20px;
   bottom: 10px;
   z-index: 1001;
-  min-width: 101px;
-  margin-top: -20px;
 }
 
 #image {
