--- a/src/admin.hbs
+++ b/src/admin.hbs
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="theme-color" content="#56ab29" />
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
     <link href="https://www.inandoutbelleza.es/assets/images/favicon.png" rel="shortcut icon"
           type="image/x-icon">
     <link href="https://www.inandoutbelleza.es/assets/images/apple-touch-icon.png"
