--- a/src/apps/login/index.scss
+++ b/src/apps/login/index.scss
@@ -1,3 +1,12 @@
 #wrapper {
   width: 100%;
 }
+#english {
+  width: 50px;
+  vertical-align: middle;
+}
+
+#spanish {
+  width: 50px;
+  vertical-align: middle;
+}
