new worker cristi

--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -11,7 +11,7 @@
     </div>
     <div #cristina class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
-    <div #mari class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
+    <div #cristi class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
     <div #vanessa class="day-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--1-col-desktop">
     </div>
