--- a/src/admin/components/print/template.html
+++ b/src/admin/components/print/template.html
@@ -34,6 +34,11 @@
                 <input type="checkbox" id="compania" class="mdl-switch__input">
                 <span class="mdl-switch__label">COMPAÑIA</span>
             </label>
+            <span style="display: inline-block; width: 100px;"></span>
+            <label style="width: auto;" class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="buenaventura">
+                <input type="checkbox" id="buenaventura" class="mdl-switch__input">
+                <span class="mdl-switch__label">BUENAVENTURA</span>
+            </label>
             <button type="button"
                     style="position: absolute;right: 80px;bottom: 10px;"
                     onclick="this.form.print()"
