--- a/src/public/components/homePage/homePage.html
+++ b/src/public/components/homePage/homePage.html
@@ -5,18 +5,18 @@
             <div #header></div>
             <div #divider></div>
             <div #iconswrapper>
-                <a target="_blank" href="/assets/images/tarifa_de_precios.pdf" class="clickable"
-                   style="position: relative;display: inline-block;width: 60px;
-                   height: 60px;margin: 10px 20px;text-align: center;cursor: pointer;
-                   vertical-align: middle;text-decoration: none;/* pointer-events: none; */">
-                    <div class="green-color flaticon-shopping-bag" style="font-size: 45px; opacity: 0.8;">
-                        <span class="icon-notify" style="color: white; display: none;">!</span>
-                    </div>
-                    <div class="dark-grey-color"
-                         style="font-size: 14px; height: 20px; position: absolute; left: -16px; width: 96px;">
-                        {{homePage.pdfPrices}}
-                    </div>
-                </a>
+                <!--<a target="_blank" href="/assets/images/tarifa_de_precios.pdf" class="clickable"-->
+                   <!--style="position: relative;display: inline-block;width: 60px;-->
+                   <!--height: 60px;margin: 10px 20px;text-align: center;cursor: pointer;-->
+                   <!--vertical-align: middle;text-decoration: none;/* pointer-events: none; */">-->
+                    <!--<div class="green-color flaticon-shopping-bag" style="font-size: 45px; opacity: 0.8;">-->
+                        <!--<span class="icon-notify" style="color: white; display: none;">!</span>-->
+                    <!--</div>-->
+                    <!--<div class="dark-grey-color"-->
+                         <!--style="font-size: 14px; height: 20px; position: absolute; left: -16px; width: 96px;">-->
+                        <!--{{homePage.pdfPrices}}-->
+                    <!--</div>-->
+                <!--</a>-->
                 <span #icons></span>
             </div>
             <div style="height: 27px; margin-top: 20px; clear: both;">
