--- a/src/admin/components/events/style.scss
+++ b/src/admin/components/events/style.scss
@@ -8,7 +8,7 @@
 #vanessa {height: 620px;}
 #eila {height: 620px;}
 #cristina {height: 620px;}
-#mari {height: 620px;}
+#cristi {height: 620px;}
 
 .desktop #carmen { width: 14%; margin: 0 0.1%}
 .desktop #carmen_v { width: 14%; margin: 0 0.1%}
@@ -16,4 +16,4 @@
 .desktop #vanessa { width: 14%; margin: 0 0.1%}
 .desktop #eila { width: 14%; margin: 0 0.1%}
 .desktop #cristina { width: 14%; margin: 0 0.1%}
-.desktop #mari { width: 14%; margin: 0 0.1%}
+.desktop #cristi { width: 14%; margin: 0 0.1%}
